--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,9 +1,28 @@
 doctype html
 html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    h1
-        a(href="/") My simple blog
-    block content
+    head
+        title Node Simple Blog
+        link(rel='stylesheet', href='/vendor/css/bootstrap.min.css')
+        link(rel='stylesheet', href='/vendor/css/bootstrap-theme.min.css')
+    body
+        nav(class="navbar navbar-default", role="navigation")
+            div(class="container-fluid")
+                div(class="navbar-header")
+                    button(type="button", class="navbar-toggle" data-toggle="collapse", data-target="#collapse")
+                        span(class="sr-only") Toggle navigation
+                        span(class="icon-bar")
+                        span(class="icon-bar")
+                        span(class="icon-bar")
+                    a(class="navbar-brand", href="/") Node Simple Blog
+
+                div(class="collapse navbar-collapse", id="collapse")
+                    ul(class="nav navbar-nav")
+                        li
+                            a(href="/post/new")
+                                span(class="glyphicon glyphicon-plus")
+                                span New post
+    div(class="container")
+        block content
+    
+    script(src='/vendor/js/jquery-2.1.0.min.js')
+    script(src='/vendor/js/bootstrap.min.js')
