--- a/views/newPost.jade
+++ b/views/newPost.jade
@@ -1,11 +1,19 @@
 extends layout
 
 block content
-    form(action='/post', method='POST')
-        label(for='title') Title
-        input(type='text', id='title', name='title', placeholder='New Post')
-        label(for='author') Author
-        input(type='text', id='author', name='author' placeholder='Author')
-        label(for='content') Content
-        textarea(id='content', name='content', rows=10, cols=50 placeholder='Enter your post content')
-        input(type='submit')
+    form(action='/post', method='POST', class="form-horizontal")
+        div(class="form-group")
+            label(for='title', class="col-sm-1 control-label") Title
+            div(class="col-sm-8")
+                input(type='text', id='title', name='title', placeholder='New Post', class="form-control")
+        div(class="form-group")
+            label(for='author', class="col-sm-1 control-label") Author
+            div(class="col-sm-8")
+                input(type='text', id='author', name='author' placeholder='Author', class="form-control")
+        div(class="form-group")
+            label(for='content', class="col-sm-1 control-label") Content
+            div(class="col-sm-8")
+                textarea(id='content', name='content', rows=10, cols=50 placeholder='Enter your post content', class="form-control")
+        div(class="form-group")
+            div(class="col-sm-offset-1 col-sm-8")
+                input(type='submit', class="btn btn-default")
