--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,9 +20,11 @@ html
                         li
                             a(href="/post/new")
                                 span(class="glyphicon glyphicon-plus")
-                                span New post
+                                | New post
     div(class="container")
         block content
     
     script(src='/vendor/js/jquery-2.1.0.min.js')
+    script(src='/vendor/js/jquery.validate.min.js')
     script(src='/vendor/js/bootstrap.min.js')
+    script(src='/js/main.js')
